[package]
name = "test"
version = "0.1.0"
authors = ["ryotarofr <ryoryo.fr0608@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
drawing-pad = { path = "drawing-pad" }
winit = "0.30"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "Element",
  "HtmlCanvasElement",
] }
wasm-bindgen = "0.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
